2007-09-18  Martin Leidig  <mleidig@schlund.de>

	* projects/core/script/webservice.js: support Null values for 
	Date and Calendar objects (bugfix)

2007-09-12  Martin Leidig  <mleidig@schlund.de>

	Improved extension function exception handling: Due to an 
	unfortunate implementation of Saxon's FunctionProxy only 
	the exception message and no stacktrace or cause of an error, 
	occurred within an extension function, is available in the 
	resulting TransformerException. Using the ExtensionFunctionUtils
	class an extension function can catch its exceptions and store 
	it threadlocally calling the method setExtensionFunctionError. 
	Later, during exception handling, the  exception can be retrieved 
	calling getExtensionFunctionError(). This mechanism is used by
	TransformerCallback and Xslt to subsequently add the extension 
	function exception to the TransformerException.

	* de/schlund/pfixxml/util/ExtensionFunctionUtils.java
	* de/schlund/pfixcore/util/TransformerCallback.java
	* de/schlund/pfixxml/util/Xslt.java

2007-09-10  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/SessionContextStore.java: added method
	getServletNames() which returns the servlet names under which
	Contexts are stored (needed for generic access to Context by
	various applications)

2007-09-06  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/AbstractXMLServlet.java: 
	* src/de/schlund/pfixxml/SessionCleaner.java: 
	* projects/core/xsl/master.xsl: 
	Register frames for SPDocument reuse and delete the SPDocument after
	all frames have been rendered.

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
	Fixed an exception occurring when the Context#isAuthorized() method was 
	called and the context had not been authenticated yet.
	

2007-09-06  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/ContextXMLServlet.java: synchronize the first 