@@ -1,3 +1,10 @@
+2007-09-19  Martin Leidig  <mleidig@schlund.de>
+
+	* projects/core/script/webservice.js: allow Null values for
+	bean properties
+	* projects/webservice/htdocs/typetest-pfxsoap.js: add new
+	tests for Null values
+
 2007-09-18  Martin Leidig  <mleidig@schlund.de>
 
 	* projects/core/script/webservice.js: support Null values for 
